[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MapSettings.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/Obstacle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/Monster.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
z_index = -4096
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 3000, 3000 )

[node name="MapBoundary" type="StaticBody2D" parent="."]
editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
script = ExtResource( 2 )
bounds = Rect2( 0, 0, 3000, 3000 )

[node name="Edge" type="CollisionShape2D" parent="MapBoundary"]
shape = SubResource( 1 )

[node name="Edge2" type="CollisionShape2D" parent="MapBoundary"]
shape = SubResource( 2 )

[node name="Edge3" type="CollisionShape2D" parent="MapBoundary"]
shape = SubResource( 3 )

[node name="Edge4" type="CollisionShape2D" parent="MapBoundary"]
shape = SubResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 578, 279 )
speed = 350
rotation_speed = 2.5

[node name="Obstacles" type="Node2D" parent="."]

[node name="Obstacle" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1066.34, 507.801 )

[node name="Monsters" type="Node2D" parent="."]

[node name="Monster" parent="Monsters" instance=ExtResource( 5 )]
position = Vector2( 111.078, 626.334 )

